# Sysmoni

./: .gitignore  AGENTS.md  AGENTS_NEW.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  DISPATCH.md  PARALLEL_OPS.md  README.md  RUN_WINDOWS11.md  WORKFLOW_CHEATSHEET.md  ai.md  aura-gui.cmd  aura-gui.ps1  aura.cmd  aura.ps1  codex_agents_logs.md  coding_guideliines.md  coding_guidelines.md  groupchat.md  log.md  pyproject.toml
installer/windows/: aura_launcher.ps1  build_platform_native.ps1  build_shell_native.ps1
src/: main.py
src/contracts/: __init__.py  types.py
src/core/: poller.py  store.py  types.py
src/gui/: __init__.py  window.py
src/render/: CMakeLists.txt  README.md  __init__.py  _metrics.py  animation.py  compositor.py  formatting.py  status.py  theme.py
src/render/native/: CMakeLists.txt  README.md
src/render/native/include/: aura_render.h
src/render/native/include/render_native/: formatting.hpp  math.hpp  qt_hooks.hpp  status.hpp  theme.hpp  widgets.hpp  widgets_models.hpp
src/render/native/src/: c_api.cpp  formatting.cpp  math.cpp  qt_hooks.cpp  status.cpp  theme.cpp  widgets.cpp  widgets_models.cpp
src/render/widgets/: __init__.py  _base.py  glass_panel.py  radial_gauge.py  sparkline.py  timeline.py
src/runtime/: CMakeLists.txt  README.md  __init__.py  app.py  config.py  dvr.py  main.py  store.py
src/runtime/native/: CMakeLists.txt  README.md
src/runtime/native/include/: aura_platform.h
src/runtime/native/src/: c_api.cpp  config_win.cpp  dvr_lttb.cpp  platform_internal.hpp  runtime_cli.cpp  store_sqlite.cpp  system_snapshot_win.cpp
src/shell/: __init__.py  titlebar.py  window.py
src/shell/native/: CMakeLists.txt  README.md
src/shell/native/include/aura_shell/: cockpit_controller.hpp  cockpit_types.hpp  dock_model.hpp  render_bridge.hpp  telemetry_bridge.hpp  timeline_bridge.hpp
src/shell/native/qml/: CockpitScene.qml
src/shell/native/src/: cockpit_controller.cpp  dock_model.cpp  main.cpp  render_bridge.cpp  telemetry_bridge.cpp  timeline_bridge.cpp
src/shell/native/tests/: cockpit_controller_tests.cpp  dock_model_tests.cpp  timeline_bridge_tests.cpp
src/telemetry/: README.md  __init__.py  disk.py  native_backend.py  network.py  poller.py  thermal.py
src/telemetry/native/: CMakeLists.txt  build.ps1
src/telemetry/native/include/: telemetry_abi.h  telemetry_engine.h
src/telemetry/native/src/: aura_telemetry_native.cpp  telemetry_engine.cpp
tests/: test_gui_window.py  test_main.py  test_poller.py  test_store.py  test_types.py
tests/test_platform/: CMakeLists.txt  README.md  cli_latest_disk_fields_test.ps1  run_native_tests.ps1  test_app.py  test_config.py  test_dvr.py  test_main.py  test_packaging.py  test_store.py
tests/test_platform/native/: CMakeLists.txt  test_platform_native.cpp
tests/test_render/: CMakeLists.txt  __init__.py  render_native_tests.cpp  test_animation.py  test_compositor.py  test_formatting.py  test_metrics.py  test_status.py  test_theme.py
tests/test_render/test_widgets/: test_glass_panel.py  test_radial_gauge.py  test_sparkline.py  test_timeline.py
tests/test_shell/: CMakeLists.txt  README.md  test_native_scaffold.py  test_titlebar.py  test_window.py
tests/test_shell/native/: cockpit_controller_tests.cpp  dock_model_tests.cpp
tests/test_telemetry/: CMakeLists.txt  README.md  run_native_tests.ps1  test_disk.py  test_native_backend.py  test_network.py  test_poller.py  test_thermal.py  test_types.py
tests/test_telemetry/native/: test_process_abi_safety.cpp  test_telemetry_native.cpp
