[project]
name = "aura"
version = "0.1.0"
description = "Aura system monitor bootstrap."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "psutil>=5.9",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.12.8",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
