[project]
name = "aura"
version = "0.1.0"
description = "Aura system monitor bootstrap."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "psutil>=5.9",
    "wmi>=1.5.1; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.12.8",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/contracts",
    "src/core",
    "src/gui",
    "src/render",
    "src/shell",
    "src/telemetry",
]
